--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
   "scripts": {
     "ts-node": "ts-node",
     "tsc": "tsc",
-    "clean:tsc": "rm tsconfig.tsbuildinfo"
+    "clean:tsc": "rm tsconfig.tsbuildinfo",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc/core": "^1.3.64",
+    "@swc/jest": "^0.2.26",
+    "@types/jest": "^29.5.2",
     "@types/node": "14.14.31",
+    "@types/uuid": "^9.0.2",
+    "jest": "^29.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
   }
 }
