--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@swc/core": "^1.3.64",
     "@swc/jest": "^0.2.26",
     "@types/jest": "^29.5.2",
