--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Admin do catalogo de videos",
   "main": "index.js",
   "scripts": {
+    "build": "rm -rf dist && tsc -p tsconfig-build.json",
     "ts-node": "ts-node",
     "tsc": "tsc",
     "tsc:check": "npm run tsc -- --noEmit",
@@ -23,10 +24,16 @@
     "@types/uuid": "^9.0.2",
     "jest": "^29.5.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "ttypescript": "^1.5.15",
+    "typescript": "^5.1.3",
+    "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
     "class-validator": "^0.14.0",
     "uuid": "^9.0.0"
+  },
+  "imports": {
+    "#seedwork/*": "./dist/@seedwork/*.js",
+    "#category/*": "./dist/category/*.js"
   }
 }
