--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "tsc:check": "npm run tsc -- --noEmit",
     "clean:tsc": "rm tsconfig.tsbuildinfo",
     "test": "jest",
-    "test:coverage": "npm run test -- --coverage"
+    "test:coverage": "npm run test -- --coverage",
+    "cti": "cti",
+    "cti:@core": "sh ./cti.sh"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +24,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "14.14.31",
     "@types/uuid": "^9.0.2",
+    "create-ts-index": "^1.14.0",
     "jest": "^29.5.0",
     "ts-node": "^10.9.1",
     "ttypescript": "^1.5.15",
