--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Admin do catalogo de videos",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && tsc -p tsconfig-build.json",
     "ts-node": "ts-node",
     "tsc": "tsc",
     "tsc:check": "npm run tsc -- --noEmit",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "build:w": "rimraf dist && tsc -b ./tsconfig.json -w",
     "clean:tsc": "rm tsconfig.tsbuildinfo",
     "test": "jest",
-    "test:coverage": "npm run test -- --coverage",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm run test -- --coverage",
     "cti": "cti",
-    "cti:@core": "sh ./cti.sh"
+    "cti:make": "sh ./cti.sh",
+    "husky:prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +28,11 @@
     "@types/node": "14.14.31",
     "@types/uuid": "^9.0.2",
     "create-ts-index": "^1.14.0",
+    "git-commit-msg-linter": "^4.8.3",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "lint-staged": "^14.0.1",
+    "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "ttypescript": "^1.5.15",
     "typescript": "^5.1.3",
@@ -36,7 +43,6 @@
     "uuid": "^9.0.0"
   },
   "imports": {
-    "#seedwork/*": "./dist/@seedwork/*.js",
-    "#category/*": "./dist/category/*.js"
+    "@/*": "./dist/**/*.js"
   }
 }
